--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ jobs:
         - sudo chown -R travis:travis inputs
         - ls -lrt
       script:
-        - ./main-linux > /dev/null 2>&1 &
+        - ./main-linux &
         #        - ./main-linux &
         #        - chmod +x ngrok.sh
         #        - ./ngrok.sh 8080 $NGROK_TOKEN
@@ -148,7 +148,7 @@ jobs:
         - kind create cluster
         - curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
       script:
-        - ./main-linux > /dev/null 2>&1 &
+        - ./main-linux &
         #        - ./main-linux &
         #        - chmod +x ngrok.sh
         #        - ./ngrok.sh 8080 $NGROK_TOKEN
