--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ jobs:
         SCRIPTS_DIR: tests
         MAX_DEPLOYMENTS: 3
         NGROK_TOKEN: 1RER6BUC3QNNwYWY5LcIBjrv3A8_24QccmopTEQJGMErG9uzw
+        TEST_ENV: vm
       before_script:
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker pull alpine:3.9.4
@@ -51,7 +52,7 @@ jobs:
         - sudo chown -R travis:travis inputs
         - ls -lrt
       script:
-        - ./main-linux > /dev/null 2>&1 &
+        - ./main-linux &
         #        - ./main-linux &
         #        - chmod +x ngrok.sh
         #        - ./ngrok.sh 8080 $NGROK_TOKEN
@@ -148,7 +149,7 @@ jobs:
         - kind create cluster
         - curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
       script:
-        - ./main-linux > /dev/null 2>&1 &
+        - ./main-linux &
         #        - ./main-linux &
         #        - chmod +x ngrok.sh
         #        - ./ngrok.sh 8080 $NGROK_TOKEN
