updated command to generate the binary

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ jobs:
         - docker pull alpine:3.9.4
         - docker pull mysql:5.6
         - pip3 install -r requirements.txt
-        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/**:rest/api/views/swaggerui/" main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/:rest/api/views/swaggerui/" main.py
         - ls -lrt dist
         - cp dist/main main-linux
         - chmod +x main-linux
@@ -106,7 +106,7 @@ jobs:
       before_script:
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - pip3 install -r requirements.txt
-        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/**:rest/api/views/swaggerui/" main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/:rest/api/views/swaggerui/" main.py
         - ls -lrt dist
         - cp dist/main main-linux
         - docker pull centos:8
@@ -139,7 +139,7 @@ jobs:
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker pull alpine:3.10.2
         - pip3 install -r requirements.txt
-        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/**:rest/api/views/swaggerui/" main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/:rest/api/views/swaggerui/" main.py
         - ls -lrt dist
         - cp dist/main main-linux
         - chmod +x main-linux
@@ -175,7 +175,7 @@ jobs:
         - docker pull mysql:5.6
         - docker pull estuaryoss/agent-go:latest
         - docker pull estuaryoss/netflix-eureka:1.10.5
-        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/**:rest/api/views/swaggerui/" main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/:rest/api/views/swaggerui/" main.py
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -225,7 +225,7 @@ jobs:
         - docker pull estuaryoss/agent:latest
         - docker pull estuaryoss/discovery:latest
         - docker pull estuaryoss/netflix-eureka:1.10.5
-        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/**:rest/api/views/swaggerui/" main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/:rest/api/views/swaggerui/" main.py
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -271,7 +271,7 @@ jobs:
         SCRIPTS_DIR: tests
       before_script:
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
-        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/**:rest/api/views/swaggerui/" main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/:rest/api/views/swaggerui/" main.py
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -300,7 +300,7 @@ jobs:
       before_script:
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker pull alpine:3.9.4
-        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/**:rest/api/views/swaggerui/" main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/:rest/api/views/swaggerui/" main.py
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -334,7 +334,7 @@ jobs:
       services: docker
       before_deploy:
         - pip3 install -r requirements.txt
-        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/**:rest/api/views/swaggerui/" main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/views/swaggerui/:rest/api/views/swaggerui/" main.py
         - ls -lrt dist
         - cp dist/main main-linux
         - ls -lrt
