--- a/inputs/variables/variables.yml
+++ b/inputs/variables/variables.yml
@@ -4,8 +4,8 @@ databases:
     restart: always
     image: mysql:5.6
     environment:
-      MYSQL_ROOT_PASSWORD: 'root'
-      MYSQL_DATABASE: 'store'
+      MYSQL_ROOT_PASSWORD: 'change_it!'
+      MYSQL_DATABASE: 'change_db_name'
     command: --default-authentication-plugin=mysql_native_password
     expose:
       - '3306'
@@ -17,7 +17,7 @@ apps:
   mysql56:
     environment:
       DatabaseType: 0
-      DBPassword: password0
+      DBPassword: change_it
       DBName: store
       DBServerName: mysql
       DBUserName: root
