--- a/tests/rest_docker/input/mysql56.yml
+++ b/tests/rest_docker/input/mysql56.yml
@@ -4,8 +4,8 @@ services:
       restart: always
       image: mysql:5.6
       environment:
-        MYSQL_ROOT_PASSWORD: 'root'
-        MYSQL_DATABASE: 'store'
+        MYSQL_ROOT_PASSWORD: 'change_it'
+        MYSQL_DATABASE: 'change_db_name'
       command: --default-authentication-plugin=mysql_native_password
       expose:
         - '3306'
